--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -155,6 +155,13 @@ img {
   filter: grayscale(var(--image-grayscale)) opacity(var(--image-opacity));
 }
 
+html,
+body {
+  max-width: 100%;
+  overflow-x: hidden;
+  overflow-y: hidden;
+}
+
 /*
 FOR DARK MODE
 
